feat: major refactor - SSE protocol, rule engine rename, Docker support, CI/CD
- Refactor protocol adapters: AbstractSdkProtocol -> AbstractSseProtocol,
  ProtocolAdapter -> SseProtocolAdapter
- Rename core enums/classes for consistency (Enum suffix -> Type, RuleEngine -> JexlRuleEvaluator)
- Add Dockerfile for gateway-app, compute, and web modules
- Add docker-compose.yml for local development
- Add GitHub Actions CI workflow
- Add .env.example for configuration template
- Add comprehensive unit tests for gateway MCP, compute, and core modules
- Extract ChainExecutor, ChainEventBus, ChainExecutionHooks, ParameterResolver
- Add unified expression evaluator
- Fix ProviderApiKeyService refactoring
- Update .gitignore with .hermes/ exclusion